add general styles

--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css" media="all">
     <title>Music Box - Nichi</title>
 </head>
 <body>
-    
+    <h1>Онлайн музыка где угодно</h1>
+    <h2>без ограничений</h2>
 </body>
 </html>
