--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,15 @@
     <title>Music Box - Nichi</title>
 </head>
 <body>
-    <h1>Онлайн музыка где угодно</h1>
-    <h2>без ограничений</h2>
+    <section id="page-description" class="mt-200 mb-200">
+        <h1>Онлайн музыка где угодно</h1>
+        <h2>без ограничений</h2>
+        <p>Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
+        <form class="input-form">
+            <input type="text" name="name" placeholder="Имя">
+            <input type="text" name="Email" placeholder="Email">
+            <button class="input-button">ПОЛУЧИТЬ ДОСТУП</button>
+        </form>
+    </section>   
 </body>
 </html>
