--- a/src/index.html
+++ b/src/index.html
@@ -8,14 +8,14 @@
     <title>Music Box - Nichi</title>
 </head>
 <body>
-    <section id="page-description" class="mt-200 mb-200">
+    <section id="page-description" class="header">
         <h1>Онлайн музыка где угодно</h1>
         <h2>без ограничений</h2>
         <p>Получите доступ всего за несколько шагов. Заполните форму ниже и откройте мир музыки</p>
-        <form class="input-form">
-            <input type="text" name="name" placeholder="Имя">
-            <input type="text" name="Email" placeholder="Email">
-            <button class="input-button">ПОЛУЧИТЬ ДОСТУП</button>
+        <form class="main-form">
+            <input type="text" name="name" placeholder="Имя" class="input-form pl-20">
+            <input type="text" name="Email" placeholder="Email" class="input-form pl-20">
+            <!-- <button class="input-button mt-20 mb-20 ml-30 mr-30" type="submit">ПОЛУЧИТЬ ДОСТУП</button> -->
         </form>
     </section>   
 </body>
